--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-data-grid": "^8.27.1",
     "@mui/x-date-pickers": "^8.27.0",
     "axios": "^1.13.5",
+    "keycloak-js": "^26.2.3",
     "lucide-react": "^0.540.0",
     "luxon": "^3.7.2",
     "next": "16.1.6",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
