Inject NEXT_PUBLIC secrets during build

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@
 NEXT_PUBLIC_API_URL=http://localhost:3000
 
 # Keycloak Configuration
-NEXT_PUBLIC_KEYCLOAK_URL=https://kc.lab.ishtiaquezafar.com
+NEXT_PUBLIC_KEYCLOAK_URL=http://localhost:8080
